# speed

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt
src/speed/: CMakeLists.txt  algorithm.hpp  alias.hpp  argparse.hpp  containers.hpp  exception.hpp  filesystem.hpp  iostream.hpp  lowlevel.hpp  math.hpp  scalars.hpp  speed.hpp  speed_alias.hpp  speed_version.hpp  stringutils.hpp  system.hpp  time.hpp  type_casting.hpp  type_traits.hpp  version.hpp
src/speed/algorithm/: algorithm.cpp  algorithm.hpp  operations.hpp  simple_compare.hpp
src/speed/argparse/: arg_constraint_flags.hpp  arg_error_flags.hpp  arg_flags.hpp  arg_parser_error_flags.hpp  arg_parser_flags.hpp  arg_value_error_flags.hpp  arg_value_types.hpp  argparse.cpp  argparse.hpp  argparse_exception.hpp  argparse_forward_declarations.hpp  argparse_type_casters.cpp  argparse_type_casters.hpp  args_dependencies_flags.hpp  basic_arg_constraint.hpp  basic_arg_constraint_setter.hpp  basic_arg_key.hpp  basic_arg_parser.hpp  basic_arg_parser_setter.hpp  basic_arg_value.hpp  basic_args_dependencies.hpp  basic_at_least_one_found.hpp  basic_base_arg.hpp  basic_base_arg_setter.hpp  basic_help_arg.hpp  basic_help_arg_setter.hpp  basic_help_menu.hpp  basic_help_menu_setter.hpp  basic_help_text.hpp  basic_key_arg.hpp  basic_key_arg_setter.hpp  basic_key_value_arg.hpp  basic_key_value_arg_setter.hpp  basic_keyless_arg.hpp  basic_keyless_arg_setter.hpp  basic_mutually_exclusive.hpp  basic_mutually_exclusive_constraint.hpp  basic_one_or_more_constraint.hpp  basic_positional_arg.hpp  basic_positional_arg_setter.hpp  (+12 more)
src/speed/containers/: circular_doubly_linked_list.hpp  const_iterator_base.hpp  const_mutable_iterator_base.hpp  containers.cpp  containers.hpp  containers_exception.hpp  doubly_linked_node.hpp  exception.hpp  flags.hpp  i_const_iterator.hpp  i_const_mutable_iterator.hpp  i_iterator.hpp  i_mutable_iterator.hpp  iterator_base.hpp  linked_list.hpp  mutable_iterator_base.hpp  static_cache.hpp
src/speed/cryptography/: city_hash.cpp  city_hash.hpp  cryptography.cpp  cryptography.hpp  operations.cpp  operations.hpp
src/speed/errors/: error_category_base.hpp  errors.cpp  errors.hpp
src/speed/exception/: exception_base.hpp  message_exception_base.hpp
src/speed/exceptions/: basic_message_exception.hpp  exception_base.hpp  exceptions.cpp  exceptions.hpp  message_exception.hpp
src/speed/filesystem/: directory_iteration.cpp  directory_iteration.hpp  directory_path_decorator.hpp  execute_path_decorator.hpp  filesystem.cpp  filesystem.hpp  forward_declarations.hpp  operations.hpp  output_path_decorator.hpp  paths_declarations.hpp  read_path_decorator.hpp  regular_file_path_decorator.hpp  secure_path.hpp  touch_path_decorator.hpp  valid_path.hpp  write_path_decorator.hpp
src/speed/iostream/: basic_ios_redirect.hpp  basic_ostream.hpp  indentation.cpp  indentation.hpp  iostream.cpp  iostream.hpp  operations.cpp  operations.hpp  stdio.cpp  stdio.hpp
src/speed/lowlevel/: arithmetic_operations.hpp  enable_bitwise_operators.hpp  exception.hpp  logical_operations.hpp  lowlevel.cpp  lowlevel.hpp  lowlevel_exception.hpp  operations.hpp
src/speed/math/: math.cpp  math.hpp  operations.hpp
src/speed/memory/: memory.cpp  memory.hpp  operations.hpp
src/speed/safety/: exception.hpp  operations.hpp  safety.cpp  safety.hpp
src/speed/scalars/: is_flag_enum.hpp  operations.hpp  scalar.hpp  scalars.cpp  scalars.hpp
src/speed/stringutils/: c_string_utils.hpp  concepts.hpp  forward_declarations.hpp  operations.hpp  string_utils.hpp  stringutils.cpp  stringutils.hpp
src/speed/system/: api.hpp  error.hpp  exception.hpp  filesystem.hpp  process.hpp  system.cpp  system.hpp  terminal.hpp  time.hpp  type_traits.hpp
src/speed/time/: child_cpu_chrono.cpp  child_cpu_chrono.hpp  chrono_base.cpp  chrono_base.hpp  chrono_states.hpp  cpu_chrono.cpp  cpu_chrono.hpp  i_chrono.hpp  monotonic_chrono.cpp  monotonic_chrono.hpp  monotonic_timer.cpp  monotonic_timer.hpp  time.cpp  time.hpp
src/speed/type_casting/: basic_string_to_type.hpp  basic_type_caster.hpp  c_string_to_basic_string.hpp  c_string_to_floating_point.hpp  c_string_to_integral_signed.hpp  c_string_to_integral_unsigned.hpp  c_string_to_path.hpp  error_category.cpp  error_category.hpp  error_codes.hpp  error_conditions.hpp  exception.hpp  forward_declarations.hpp  i_type_caster.hpp  string_caster.hpp  try_cast_basic_string_to_type.hpp  try_cast_c_string_to_basic_regex.hpp  try_cast_c_string_to_basic_string.hpp  try_cast_c_string_to_floating_point.hpp  try_cast_c_string_to_integral_signed.hpp  try_cast_c_string_to_integral_unsigned.hpp  try_cast_c_string_to_path.hpp  try_cast_c_string_to_secure_path.hpp  try_type_cast.hpp  type_cast.hpp  type_caster_base.hpp  type_casting.cpp  type_casting.hpp  type_casting_exception.hpp
src/speed/type_traits/: operations.hpp  type_traits.cpp  type_traits.hpp
tests/speed_gtest/: CMakeLists.txt  main.cpp
tests/speed_gtest/algorithm_test/: algorithm_test.cpp  operations_test.cpp
tests/speed_gtest/argparse_test/: arg_parser_test.cpp
tests/speed_gtest/containers_test/: circular_doubly_linked_lists_test.cpp  flags_test.cpp  linked_lists_test.cpp  static_cache_test.cpp
tests/speed_gtest/filesystem_test/: directory_iteration_test.cpp  valid_path_test.cpp
tests/speed_gtest/iostream_test/: indentation_test.cpp
tests/speed_gtest/lowlevel_test/: arithmetic_operations_test.cpp  enum_bitwise_operators_test.cpp  logical_operations_test.cpp  operations_test.cpp
tests/speed_gtest/safety_test/: operations_test.cpp
tests/speed_gtest/scalars_test/: operations_test.cpp  scalar_test.cpp  scalars_test.cpp
tests/speed_gtest/stringutils_test/: c_string_utils_test.cpp  operations.cpp  string_utils_test.cpp
tests/speed_gtest/system_test/: filesystem_test.cpp  process_test.cpp  terminal_test.cpp  time_test.cpp
tests/speed_gtest/time_test/: cpu_chono_test.cpp  monotonic_chrono_test.cpp
tests/speed_gtest/type_casting_test/: try_type_cast_test.cpp  type_cast_test.cpp
tests/speed_gtest/type_traits_test/: operations_test.cpp  (+1 more)
(+227 files in other folders)
